@@ -10,6 +10,8 @@ package com.meterware.httpunit;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Dictionary;
@@ -158,8 +160,15 @@ public class WebConversation extends WebClient {
         if (HttpUnitOptions.isLoggingHttpHeaders()) {
             System.out.println("Rerouting request to :: " + actualHost);
         }
-        return new URL(request.getURL().getProtocol(), actualHost, request.getURL().getPort(),
-                request.getURL().getFile());
+        try {
+            URL requestUrl = request.getURL();
+            return new URI(requestUrl.getProtocol(), null, actualHost, requestUrl.getPort(), requestUrl.getPath(),
+                    requestUrl.getQuery(), requestUrl.getRef()).toURL();
+        } catch (IllegalArgumentException | URISyntaxException e) {
+            MalformedURLException malformedURLException = new MalformedURLException(e.getMessage());
+            malformedURLException.initCause(e);
+            throw malformedURLException;
+        }
     }
 
     // ---------------------------------- private members --------------------------------
